# Cortex

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  visualize_subtask_sampling.py
annotations/: agibot_val_spatial.jsonl  behavior1k_val_counting.jsonl  behavior1k_val_long.jsonl  behavior1k_val_spatial.jsonl  galaxea_val_counting.jsonl  galaxea_val_long.jsonl  galaxea_val_spatial.jsonl
assets/dump_bin_bigbin/: README.md
assets/dump_bin_bigbin/data/chunk-000/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet  episode_000003.parquet  episode_000004.parquet  episode_000005.parquet  episode_000006.parquet  episode_000007.parquet  episode_000008.parquet  episode_000009.parquet
assets/dump_bin_bigbin/meta/: episodes.jsonl  episodes_lang_mem.jsonl  episodes_subtask.jsonl  info.json  tasks.jsonl
cortex/annotation/: __init__.py  annotator_server.py  dynamic_matching.py  vlm_annotation.py
cortex/dataloader/qwenvl_llavajson/: qwen_data_config.py
cortex/inference/: episode_level_eval.py  eval_subtask_dataset.py  eval_utils.py  step_level_eval.py  subtask_eval.py
cortex/inference/config/: sys2_subtask_val.json
deployment/model_server/: server_sys2.py  server_sys2_gemini.py  server_sys2_gpt.py
deployment/model_server/tools/: websocket_policy_client.py  websocket_policy_server.py
docs/: annotation.md  datasets.md  installation.md
scripts/run_scripts/: episode_level.sh  run_dynamic_matching.sh  run_manual_annotation_server.sh  run_subtask_visualization.sh  run_vlm_annotation.sh  step_level.sh
