[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex"
authors = [
    {name = "Jiaqi Peng", email="pjq23@mails.tsinghua.edu.cn"},
    {name = "Xiqian Yu", email="yuxiqian@mail.ustc.edu.cn"},
    {name = "Delin Feng", email="fengdelin@pjlab.org.cn"},
]
description = "System-2 VLM evaluation and visualization code for Cortex."
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["vision-language models", "robot task planning", "long-horizon manipulation", "evaluation"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "gpustat",
    "ipython",
    "pre-commit",
    "ruff>=0.2.2",
]
[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "tests",
    "cache",
    "results",
    "checkpoints",
    "scripts",
    "eval",
    ".vscode",
    "*.egg-info",
    "**/__pycache__",
    "*.pyc",
    "*.pyo",
    "cortex/config",
]

[tool.black]
line-length = 121
target-version = ["py310"]
preview = true

[tool.ruff]
line-length = 121
target-version = "py310"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "RUF", "W"]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
